[tool.poetry]
name = "discord-server-bridge"
packages = [
    {include = "dsbridge"}
]
version = "0.1.1"
description = ""
authors = ["Michael <m.n.stewart@live.co.uk>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.4.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.32"
requests = "^2.26.0"
psycopg2 = "^2.9.3"
pytz = "^2024.2"
python-socketio = "^5.11.4"
werkzeug = "^3.0.1"
bleach = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "*"
coverage = "^7.2.2"
pre-commit = "2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
